# GS-Reasoner

./: .gitignore  README.md  eval_3d_vg.sh  eval_general_3d.sh  eval_vsibench.sh  pyproject.toml  train_multi_finetune.sh  train_multi_pretrain.sh
llava/: arguments.py  constants.py  text_utils.py  utils.py  utils_3d.py  video_utils.py
llava/eval/: eval_multi3drefer.py  eval_scan2cap.py  eval_scanqa.py  eval_singlerefer.py  model_3dvqa.py  model_multi3drefer.py  model_singlerefer.py
llava/eval/caption_eval/cider/: cider_scorer.py
llava/model/: __init__.py  llava_arch.py  modeling_outputs.py  position_encoding.py  utils.py
llava/model/language_model/: llava_llama.py  llava_qwen.py
llava/model/language_model/qwen2/: modeling_qwen2.py
llava/model/multimodal_encoder/: builder.py
llava/submodules/: __init__.py
llava/submodules/lmms_eval/: requirements.txt
llava/submodules/lmms_eval/models/: __init__.py  gs_reasoner.py
llava/submodules/sonata/: model.py  requirements.txt  transform.py
llava/train/: llava_trainer.py  train_3d.py  train_callback.py
scripts/3d/eval/: eval_3dvqa.sh  eval_multi3drefer.sh  eval_singlerefer.sh
scripts/3d/preprocessing/: README.md  axis_align_pcd.py
scripts/3d/preprocessing/arkitscenes/: export_sampled_frames.py  scenes_train.txt  scenes_val.txt
scripts/3d/preprocessing/scannet/: export_sampled_frames.py
scripts/3d/preprocessing/scannetpp/: export_iphone_frames.py
scripts/3d/train/: eval_multi_finetune.yaml  eval_multi_pretrain.yaml  train_multi_finetune.yaml  train_multi_pretrain.yaml
(+5 files in other folders)
