[tool.black]
line-length = 240

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "GS-Reasoner"
version = "1.0"
description = "Reasoning in Space via Grounding in the World"
readme = "README.md"
dependencies = [
    "numpy==1.26.4",
    "llava[standalone]",
    "open_clip_torch",
    "fastapi",
    "markdown2[all]",
    "requests",
    "sentencepiece",
    "torch==2.4.0",
    "torchvision==0.19.0",
    "uvicorn",
    "wandb",
    "deepspeed==0.14.4",
    "peft==0.4.0",
    "accelerate==0.33.0",
    "tokenizers~=0.15.2",
    "transformers@git+https://github.com/huggingface/transformers.git@1c39974a4c4036fd641bc1191cc32799f85715a4",
    "bitsandbytes==0.41.0",
    "scikit-learn==1.2.2",
    "sentencepiece~=0.1.99",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "gradio_client==0.2.9",
    "urllib3<=2.0.0",
    "datasets==2.16.1",
    "pydantic==1.10.8",
    "timm",
    "hf_transfer",
    "opencv-python",
    "av",
    "decord",
    "tyro",
    "scipy",
    "imageio",
    "ray",
    "shortuuid",
    "fasteners"
]

[tool.setuptools]
packages = ["llava"]

